Changelog

April 20, 2022 -
  - Fixed Favicon
  - Added Changelog
  - Added Slope
  - Added a Github Release