@@ -1,4 +1,5 @@
 # Games
+
 this website is made for html games on chromebooks.
 <br>
 this website is ported to github from my old website.
@@ -6,3 +7,5 @@ this website is ported to github from my old website.
 https://spew45.github.io/Spew44.github.io/
 <br>
 This websites release will be updated ever ten updates. I will try to update this website pretty fast.
+<br>
+I just started using Vs code so it should be a lot faster then using github or replit.
