@@ -3,11 +3,18 @@
 <html>
     <head>
       <title>Classes</title>
-        <link rel="icon" type="image/png" href="favicon.png">
+        <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Spew45/Spew44.github.io/main/favicon.png">
         <script type="application/javascript" src="/js/main.js"></script>
     </head>
+
+    <body>
+      <p align="center">  
+      <a href="https://spew45.github.io/Spew44.github.io/" <p style=" color: white; text-align:center; font-family: 'courier new'; text-decoration:none; font-size:18px">Games | 
+      <a href="https://spew45.github.io/Spew44.github.io/changelog.txt" <p style="text-decoration:none; color: white; text-align:center; font-family: 'courier new'; font-size:18px"> Changelog
+    </body>
+
 <div class="border">
-<p align="center"><iframe src="https://raw.githubusercontent.com/Spew45/Spew44.github.io/main/favicon.png" style="width:1026px; height:600px; border: 3.5px solid white; border-radius: 25px"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/simple-games-assets/src/getaway-shootout/" style="width:1026px; height:600px; border: 3.5px solid white; border-radius: 25px"></iframe></p>
 </div>
 <body>
   <script src="myscripts.js"></script> 
