@@ -7,6 +7,12 @@
         <script type="application/javascript" src="/js/main.js"></script>
     </head>
 
+    <body>
+      <p align="center">  
+      <a href="https://spew45.github.io/Spew44.github.io/" <p style=" color: white; text-align:center; font-family: 'courier new'; text-decoration:none; font-size:18px">Games | 
+      <a href="https://spew45.github.io/Spew44.github.io/changelog.txt" <p style="text-decoration:none; color: white; text-align:center; font-family: 'courier new'; font-size:18px"> Changelog
+    </body>
+
 <p align="center"><iframe src="https://landgreen.github.io/sidescroller/" style="width:1026px; height:600px; border: 3.5px solid white; border-radius: 25px"></iframe></p>
 
 <body>
