@@ -14,3 +14,17 @@ console.log(x)
 alert("Welcome!");
 alert("Make Sure Your Screen Size Is Perfect By Pressing Ctrl+Shift+-");
 
+//nothing tbh
+myfunction()
+    console.log(z)
+    console.log(y)
+    console.log(x)
+    x = x * 2
+    z = z * 2
+    y = y * 2
+    console.log(z)
+    console.log(y)
+    console.log(x)
+
+//test lol
+myfunction ()
