@@ -5,3 +5,5 @@ April 20, 2022 -
   - Added Changelog
   - Added Slope
   - Added a Github Release
+April 21, 2022 -
+  - Made a New Github Release
